# libxml2

./: meson.build  meson_options.txt
include/libxml/: meson.build
