xmlversion_h = configure_file(input : 'xmlversion.h.in',
			      output : 'xmlversion.h',
			      configuration : withcdata)

libxml_headers = [
  'SAX.h',
  'entities.h',
  'encoding.h',
  'parser.h',
  'parserInternals.h',
  'xmlerror.h',
  'HTMLparser.h',
  'HTMLtree.h',
  'debugXML.h',
  'tree.h',
  'list.h',
  'hash.h',
  'xpath.h',
  'xpathInternals.h',
  'xpointer.h',
  'xinclude.h',
  'xmlIO.h',
  'xmlmemory.h',
  'nanohttp.h',
  'nanoftp.h',
  'uri.h',
  'valid.h',
  'xlink.h',
  xmlversion_h,
  'DOCBparser.h',
  'catalog.h',
  'threads.h',
  'globals.h',
  'c14n.h',
  'xmlautomata.h',
  'xmlregexp.h',
  'xmlmodule.h',
  'xmlschemas.h',
  'schemasInternals.h',
  'xmlschemastypes.h',
  'xmlstring.h',
  'xmlunicode.h',
  'xmlreader.h',
  'relaxng.h',
  'dict.h',
  'SAX2.h',
  'xmlexports.h',
  'xmlwriter.h',
  'chvalid.h',
  'pattern.h',
  'xmlsave.h',
  'schematron.h'
]
install_headers(libxml_headers, subdir : 'libxml2/libxml')
